@@ -3,6 +3,7 @@
   - (zathor) [MKV Muxer] changed default track flag of subtitles to no. Feature request #3086194
   - (zathor) [MKV Muxer] added option to set the default subtitle track
   - (zathor) [MKV Muxer] added option to set a subtitle delay. Feature request #3088742
+  - (zathor) [AutoEncode] added option to always mux the video encoding (enabled by default). Feature request #3082125
 
 0.3.5.16
   - (kurtnoise) add FLAC files support in the Matroska Muxer
